[package]
name = "middle-sock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dhcproto = "0.11.0"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
nix = "0.27.1"
rtnetlink = "0.14.0"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "net", "process", "sync"] }

[[bin]]
name = "middle-sock"
path = "src/bin/main.rs"
